# Paper-Piano

./: .gitignore  README.md  ZhaoDong  train  yolo
Blink1/: Blink1.sln
Blink1/Blink1/: Blink1.vcxproj  main.cpp
CameraCallback/: CameraCallback.sln  CameraCallback.vcxproj  CameraCallback.vcxproj.filters  PianoKey.h  camera.cpp  camera.h  main.cpp
CameraCallback/x64/Debug/: CameraCallback.exe.recipe  CameraCallback.ilk  CameraCallback.vcxproj.FileListAbsolute.txt  vc143.idb
CameraCallback/x64/Debug/CameraCallback.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CameraCallback.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Example of cv recognization/: README.md
audioTest/: PianoKey.h  ana.py  cutAndDuplicate.py  generateAudio.py  main.cpp
cvTest/: Doxyfile  PianoKey.h  camera.h  cvTest.sln  cvTest.vcxproj  cvTest.vcxproj.filters  main.cpp
cvTest/example/: ads1115_printer.cpp  ads1115rpi.cpp  ads1115rpi.h
cvTest/html/: _piano_key_8h.html  _piano_key_8h_source.html  annotated.html  camera_8h_source.html  class_camera-members.html  class_camera.html  class_key-members.html  class_key.html  class_piano_key-members.html  class_piano_key.html  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  main_8cpp.html  struct_camera_1_1_scene_callback-members.html  struct_camera_1_1_scene_callback.html
cvTest/html/search/: all_0.js  all_5.js  all_6.js  classes_2.js  classes_3.js  functions_2.js  searchdata.js  variables_0.js
cvTest/latex/: _piano_key_8h.tex  _piano_key_8h_source.tex  annotated.tex  camera_8h_source.tex  class_camera.tex  class_key.eps  class_key.tex  class_piano_key.eps  class_piano_key.tex  files.tex  hierarchy.tex  main_8cpp.tex  refman.tex  struct_camera_1_1_scene_callback.tex
cvTest/x64/Debug/: cvTest.exe.recipe  cvTest.ilk  cvTest.vcxproj.FileListAbsolute.txt  vc143.idb
cvTest/x64/Debug/cvTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  cvTest.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
doc/html/: _piano_key_8h_source.html  annotated.html  camera_8h_source.html  class_camera-members.html  class_camera.html  class_key-members.html  class_key.html  class_piano-members.html  class_piano.html  class_piano_key-members.html  class_piano_key.html  classes.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  hierarchy.html  index.html  key_8h_source.html  main_8cpp.html  piano_8h_source.html  struct_camera_1_1_frame_callback-members.html  struct_camera_1_1_frame_callback.html  struct_piano_1_1_my_camera_callback-members.html  struct_piano_1_1_my_camera_callback.html
doc/html/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  classes_1.js  files_1.js  functions_0.js  functions_2.js  functions_4.js  searchdata.js
doc/latex/: _piano_key_8h_source.tex  annotated.tex  camera_8h_source.tex  class_camera.tex  class_key.eps  class_key.tex  class_piano.eps  class_piano.tex  class_piano_key.tex  files.tex  hierarchy.tex  key_8h_source.tex  main_8cpp.tex  piano_8h_source.tex  refman.tex  struct_camera_1_1_frame_callback.tex  struct_piano_1_1_my_camera_callback.eps  struct_piano_1_1_my_camera_callback.tex
mutiPlay/: CMakeLists.txt
mutiPlay/src/: PianoKey.h  main.cpp
playAudioTest/src/: PianoKey.h  camera.h  main.cpp
rasPi/src/: Doxyfile  PianoKey.h  camera.h  main.cpp
rasPi/src/html/: _piano_key_8h_source.html  annotated.html  camera_8h_source.html  class_camera-members.html  class_camera.html  class_piano_key-members.html  class_piano_key.html  classes.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  struct_camera_1_1_detect_callback-members.html  struct_camera_1_1_detect_callback.html  struct_camera_1_1_press_callback-members.html  struct_camera_1_1_press_callback.html  struct_my_callback-members.html  struct_my_callback.html  struct_my_callback1-members.html  struct_my_callback1.html
rasPi/src/html/search/: all_0.js  all_2.js  all_4.js  all_6.js  all_7.js  classes_3.js  functions_0.js  pages_0.js  searchdata.js  variables_1.js  (+2 more)
rasPi/src/latex/: _piano_key_8h_source.tex  annotated.tex  camera_8h_source.tex  class_camera.tex  class_piano_key.tex  files.tex  hierarchy.tex  index.tex  refman.tex  struct_camera_1_1_detect_callback.eps  struct_camera_1_1_detect_callback.tex  struct_camera_1_1_press_callback.eps  struct_camera_1_1_press_callback.tex  struct_my_callback.eps  struct_my_callback.tex  struct_my_callback1.eps  struct_my_callback1.tex
show/src/: PianoKey.h  camera.cpp  main.cpp
src/: CMakeLists.txt  camera.cpp  camera.h  key.h  main.cpp  piano.cpp  piano.h  piano.ui
src/test/: CMakeLists.txt  gtest_camera.h
test/: CMakeLists.txt  gtest_key.h  main.cpp
